<resources>
    <string name="app_name">ViewModel</string>
    <string name="score_counter">Score Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="_1">-1</string>
    <string name="__1">+1</string>
    <string name="_0">0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>